--- a/css/styles.css
+++ b/css/styles.css
@@ -1,129 +1,30 @@
 /* Colors used
-font-color and border-color: #2D3657;
-background-color body and modal container: #d1d6de;
-background-color buttons and modal: #f6f7f7;
-
+font-color: #2D3657;
+background-color navbar:
 */
 
 
 body {
   font-family: 'Manjari', sans-serif;
   font-size: 20px;
-  background-color: #d1d6de;
-}
 
-.container {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  height: 70px;
-  border-bottom: 0.5px solid;
-  border-color: #2D3657;
-  margin-top: 15px;
-}
-
-.pokeball-icon {
-  height: 70px;
-  width: 70px;
-  padding-bottom: 5px;
-  padding-left: 10px;
-  padding-right: 10px;
-  margin-left: 4px;
-  margin-right: 2px;
 }
 
 h1 {
   color: #2D3657;
-  flex-grow: 2;
-}
-
-#modal-container {
-  display: none;
-}
-
-#modal-container.is-visible {
-  position: fixed; /* Stay in place */
-  z-index: 999; /* Sit on top */
-  left: 0;
-  top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: #d1d6de;
-  opacity: 0.9;
-  display: grid;
-  text-align: center;
-}
-
-.modal {
-  background-color: #f6f7f7;
-  margin: 10% auto; /* 10% from the top and centered */
-  padding: 20px;
-  border-radius: 5px;
-  width: 90%;
-  max-width: 700px;
-  height: auto;
-  text-align: center;
-  box-shadow: 0 4px 8px 0 #2D3657;
-}
-
-.modal-close {
-  float: right;
-  margin-top: 5px;
-  -webkit-appearance: none;
-  border: 0;
-  background: none;
-  color: #2D3657;
-  font-size: 20px;
   font-weight: bold;
 }
 
-.modal-close:hover,
-.modal-close:focus {
-  color: #1B2034;
-  font-size: 25px;
-  text-decoration: none;
-  cursor: pointer;
-  transition: color 0.3s;
+
+.pokemon-list {
+  margin-top: 80px;
 }
 
-.modal h1 {
-  margin-top: 0;
-}
-
-.modal p {
-  margin-bottom: 0;
-}
-
-ul {
-  list-style-type: none;
-  padding-left: 0;
-  margin-top: 10px;
-  margin-left: 10px;
-  margin-right: 10px;
-}
-
-.name-button {
-  margin: 2px auto;
-  width: 100%;
-  height: 70px;
-  border: 0.3px solid;
-  border-radius: 5px;
-  border-color:  #2D3657;
-  text-align: left;
-  padding-left: 10px;
-  font-size: 25px;
+.list-group-item {
   color: #2D3657;
-  background-color: #f6f7f7;
-  transition: box-shadow 0.3s;
 }
 
-.name-button:hover,
-.name-button:focus,
-.name-button:active {
-  box-shadow: 0 4px 8px 0 #2D3657;
-  cursor: pointer;
-  border: none;
-  outline: none;
+.modal-dialog {
+  color: #2D3657;
+  text-align: center;
 }
