--- a/css/styles.css
+++ b/css/styles.css
@@ -1,23 +1,26 @@
 /* Colors used
 font-color: #2D3657;
-background-color navbar:
+background-color navbar: #dbebf9;
 */
 
 
 body {
-  font-family: 'Manjari', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 20px;
-
 }
 
 h1 {
   color: #2D3657;
   font-weight: bold;
+  margin-top: 10px;
 }
 
+.form-inline {
+  float: right;
+}
 
 .pokemon-list {
-  margin-top: 80px;
+  margin-top: 100px;
 }
 
 .list-group-item {
